ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trinity-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: trinity.local
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /jellyfin
            pathType: Prefix
